--- a/bin/install
+++ b/bin/install
@@ -1,30 +1,26 @@
 #!/usr/bin/env bash
 set -euo pipefail
 
-# resolve paths
 current_script_path=${BASH_SOURCE[0]}
 plugin_dir=$(dirname "$(dirname "$current_script_path")")
 source "${plugin_dir}/lib/utils.bash"
 
-# accept version and install path as args, or fall back to ASDF vars
 version="${1:-${ASDF_INSTALL_VERSION:-}}"
 install_path="${2:-${ASDF_INSTALL_PATH:-}}"
 
 if [ -z "$version" ] || [ -z "$install_path" ]; then
   echo "Usage: $0 <version> <install-path>"
-  echo "  e.g. $0 0.31.1 /home/user/.asdf/installs/anchor/0.31.1"
   exit 1
 fi
 
-# export for download script
-export ASDF_INSTALL_VERSION="$version"
-export ASDF_INSTALL_PATH="$install_path"
-export ASDF_INSTALL_TYPE="download"
+platform="$(get_platform)" # e.g. unknown-linux-gnu
+arch="$(get_arch)"         # e.g. x86_64
+filename="anchor-${version}-${arch}-${platform}"
+url="https://github.com/solana-foundation/anchor/releases/download/v${version}/${filename}"
 
-# ensure directories
-mkdir -p "$ASDF_INSTALL_PATH"
+echo "Downloading Anchor $version from:"
+echo "  $url"
 
-# delegate to your download logic
-bash "${plugin_dir}/bin/download"
-
-# (optional) if you need any post-install steps, add here
+mkdir -p "$install_path/bin"
+curl -sSL "$url" -o "$install_path/bin/anchor"
+chmod +x "$install_path/bin/anchor"
